# qrcode-gen

./: .gitignore  pyproject.toml
