[tool.poetry]
name = "qrcode-gen"
version = "0.1.0"
description = ""
authors = ["Noshita, Koji <noshita@morphometrics.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
virtualenv = "20.0.3"
pillow = "^8.2"
qrcode = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
